Fix the input/output area alignment in Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,7 @@ a {
 #og-title {
     flex: 1;
     font-size: 2em;
-    margin: -2px 0;
+    margin: -3px 0;
     line-height: 1.15;
     border: none;
     border-bottom: 3px solid #99c3ff;
